# cookiecutter-kfpipeline-component

./: README.md  cookiecutter.json
{{cookiecutter.component_name}}/: .dockerignore  Dockerfile  README.md  build_image.sh  pyproject.toml
{{cookiecutter.component_name}}/src/: main.py
