[tool.poetry]
name = "{{cookiecutter.component_name}}"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"
click = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
